# learning-projects

./: README.md
android-projects/store-app/: settings.gradle
android-projects/store-app/app/: build.gradle
flutter-projects/friendly_chat/lib/: main.dart
flutter-projects/hello_slidy/: README.md  pubspec.yaml
flutter-projects/hello_slidy/test/: widget_test.dart
flutter-projects/hello_slidy/web/: index.html  manifest.json
flutter-projects/scrum_deck/: README.md  pubspec.yaml
flutter-projects/scrum_deck/lib/: app_block.dart  app_module.dart  app_widget.dart  main.dart
flutter-projects/scrum_deck/test/: widget_test.dart
flutter-projects/scrum_deck/web/: index.html  manifest.json
flutter-projects/sign_up/lib/: main.dart
flutter-projects/startup_namer/: pubspec.yaml
flutter-projects/startup_namer/lib/: main.dart
go-projects/gorilla-rest/: Makefile  go.sum  main.go  swagger.yaml
go-projects/gorilla-rest/data/: products.go
go-projects/gorilla-rest/handlers/: products.go
go-projects/ls-db/: main.go  reame.md
go-projects/ls-db/src/: arguments.go
go-projects/satisfactory-optimization/: go.sum  main.go  readme.md
go-projects/satisfactory-optimization/resources/: recipes.json
go-projects/simple-rest/: Dockerfile  main.go
go-projects/simple-rest/handlers/: products.go
rust-projects/nlp-impl/dict_based/: Cargo.toml
rust-projects/nlp-impl/dict_hash_table/: Cargo.toml
rust-projects/rust-programming-book/chapter-09/panic/: Cargo.toml
rust-projects/rust-programming-book/chapter-09/panic/src/: main.rs
(+156 files in other folders)
